--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,14 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <h1 id="project_title" href="https://pghvlaans.github.io/sbotools/">{{ site.title | default: site.github.repository_name }}</h1>
+          <h1 id="project_title"><a href="https://pghvlaans.github.io/sbotools/">{{ site.title | default: site.github.repository_name }}</a></h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
 	<div class="menu">
-		<a href="https://pghvlaans.github.io/sbotools/">Home</a>
-		<a href="/man/">man</a>
+		<center>
+		<h2 id="homebutton"><a href="https://pghvlaans.github.io/sbotools3/">Home</a><h2>
+		<h2 id="manmenu"><a href="/sbotools3/man/">man</a></h2>
+		</center>
 	</div>
         </header>
     </div>
