--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,7 @@
 
 	<div class="menu">
 		<center>
-		<h2 id="homebutton"><a href="https://pghvlaans.github.io/sbotools3/">Home</a><h2>
-		<h2 id="manmenu"><a href="/sbotools3/man/">man</a></h2>
+		<h2 id="menuhere"><a href="https://pghvlaans.github.io/sbotools3/">Home</a> <a href="/sbotools3/man/">man</a></h2>
 		</center>
 	</div>
         </header>
