--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -17,7 +17,7 @@ $indent-var: 1.3em !default;
 
 /* system typefaces */
 $serif: Georgia, Times, serif !default;
-$sans-serif 'IBM Plex Sans', sans-serif !default;
+$sans-serif: 'IBM Plex Sans', sans-serif !default;
 $monospace: 'IBM Plex Mono', monospace !default;
 
 /* sans serif typefaces */
