--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,11 +3,13 @@
 @font-face {
 	font-family: "IBM Plex Sans";
 	src: url("/assets/fonts/IBMPlexSans-Medium.ttf") format('truetype');
+	font-weight: sans-serif;
 	font-style: normal;
 }
 @font-face {
 	font-family: "IBM Plex Sans";
 	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
+	font-weight: sans-serif;
 	font-style: bold;
 }
 @font-face {
