--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -31,8 +31,8 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $sans-serif !default;
-$header-font-family: $sans-serif !default;
+$global-font-family: 'IBM Plex Sans', sans-serif !default;
+$header-font-family: 'IBM Plex Sans', sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
