--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,11 +15,13 @@
 @font-face {
 	font-family: "IBM Plex Mono";
 	src: url("/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
+	font-weight: monospace;
 	font-style: monospace;
 }
 
 body {
 	font-family: "IBM Plex Sans", normal;
+	font-family: "IBM Plex Sans", sans-serif;
 	font-family: "IBM Plex Sans", bold;
 	font-family: "IBM Plex Mono", monospace;
 }
