--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,22 +1,22 @@
 <head>
 <style>
 @font-face {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", sans-serif;
 	src: url("/assets/fonts/IBMPlexSans-Medium.ttf") format('truetype');
-	font-weight: sans-serif;
+	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", monospace;
 	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
-	font-weight: sans-serif;
-	font-style: bold;
+	font-weight: 700;
+	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Mono";
+	font-family: "IBM Plex Mono", monospace;
 	src: url("/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
-	font-weight: monospace;
-	font-style: monospace;
+	font-weight: 500;
+	font-style: normal;
 }
 
 body {
