--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -7,7 +7,7 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Sans", monospace;
+	font-family: "IBM Plex Sans", sans-serif;
 	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
 	font-weight: 700;
 	font-style: normal;
