--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,28 +1,27 @@
 <head>
 <style>
 @font-face {
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: "IBM Plex Sans";
 	src: url("/assets/fonts/IBMPlexSans-Medium.ttf") format('truetype');
-	font-weight: 500;
+	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: "IBM Plex Sans";
 	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
 	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Mono", monospace;
+	font-family: "IBM Plex Mono";
 	src: url("/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
-	font-weight: 500;
+	font-weight: 400;
 	font-style: normal;
 }
 
 body {
-	font-family: "IBM Plex Sans", normal;
 	font-family: "IBM Plex Sans", sans-serif;
-	font-family: "IBM Plex Sans", bold;
+	font-family: "IBM Plex Sans", serif;
 	font-family: "IBM Plex Mono", monospace;
 }
 </style>
