--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,8 +2,38 @@
 <style>
 @font-face {
 	font-family: "IBM Plex Sans";
-	src: url("/assets/fonts/IBMPlexSans-Text.ttf") format('truetype');
+	src: url("/assets/fonts/IBMPlexSans-Thin.ttf") format('truetype');
+	font-weight: 100;
+	font-style: normal;
+}
+@font-face {
+	font-family: "IBM Plex Sans";
+	src: url("/assets/fonts/IBMPlexSans-ExtraLight.ttf") format('truetype');
+	font-weight: 200;
+	font-style: normal;
+}
+@font-face {
+	font-family: "IBM Plex Sans";
+	src: url("/assets/fonts/IBMPlexSans-Light.ttf") format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+@font-face {
+	font-family: "IBM Plex Sans";
+	src: url("/assets/fonts/IBMPlexSans-Regular.ttf") format('truetype');
 	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: "IBM Plex Sans";
+	src: url("/assets/fonts/IBMPlexSans-Medium.ttf") format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: "IBM Plex Sans";
+	src: url("/assets/fonts/IBMPlexSans-SemiBold.ttf") format('truetype');
+	font-weight: 600;
 	font-style: normal;
 }
 @font-face {
