--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,19 +1,19 @@
 <head>
 <style>
 @font-face {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", sans-serif;
 	src: url("/assets/fonts/IBMPlexSans-Text.ttf") format('truetype');
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", sans-serif;
 	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
 	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Mono";
+	font-family: "IBM Plex Mono", monospace;
 	src: url("/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
 	font-weight: 500;
 	font-style: normal;
