--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,26 +1,26 @@
 <head>
 <style>
 @font-face {
-	font-family: "IBM Plex Sans";
+	font-family: 'IBM Plex Sans';
 	src: url("https://pghvhlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Text.ttf") format('truetype');
-	font-weight: 400;
+	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Sans";
+	font-family: 'IBM Plex Sans';
 	src: url("https://pghvhlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
-	font-weight: 700;
+	font-weight: bold;
 	font-style: normal;
 }
 @font-face {
-	font-family: "IBM Plex Mono";
+	font-family: 'IBM Plex Mono';
 	src: url("https://pghvhlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
-	font-weight: 400;
+	font-weight: normal;
 	font-style: normal;
 }
 
 body {
-	font-family: "IBM Plex Sans", sans-serif;
+	font-family: 'IBM Plex Sans', sans-serif;
 }
 </style>
 </head>
