--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,19 +2,19 @@
 <style>
 @font-face {
 	font-family: 'IBM Plex Sans';
-	src: url("https://pghvhlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Text.ttf") format('truetype');
+	src: url("/assets/fonts/IBMPlexSans-Text.ttf") format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'IBM Plex Sans';
-	src: url("https://pghvhlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
+	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'IBM Plex Mono';
-	src: url("https://pghvhlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
+	src: url("/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
