--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,20 +2,20 @@
 <style>
 @font-face {
 	font-family: 'IBM Plex Sans';
-	src: url("/assets/fonts/IBMPlexSans-Text.ttf") format('truetype');
-	font-weight: normal;
+	src: url(/assets/fonts/IBMPlexSans-Regular.ttf) format('truetype');
+	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'IBM Plex Sans';
-	src: url("/assets/fonts/IBMPlexSans-Bold.ttf") format('truetype');
-	font-weight: bold;
+	src: url(/assets/fonts/IBMPlexSans-Bold.ttf) format('truetype');
+	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'IBM Plex Mono';
-	src: url("/assets/fonts/IBMPlexMono-Medium.ttf") format('truetype');
-	font-weight: normal;
+	src: url(/assets/fonts/IBMPlexMono-Regular.ttf) format('truetype');
+	font-weight: 400;
 	font-style: normal;
 }
 
