--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,24 +1,31 @@
 <head>
 <style>
 @font-face {
-	font-family: 'IBM Plex Sans';
-	src: url(/assets/fonts/IBMPlexSans-Regular.ttf) format('truetype');
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'IBM Plex Sans';
-	src: url(/assets/fonts/IBMPlexSans-Bold.ttf) format('truetype');
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'IBM Plex Mono';
-	src: url(/assets/fonts/IBMPlexMono-Regular.ttf) format('truetype');
-	font-weight: 400;
-	font-style: normal;
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexsans/v19/zYXgKVElMYYaJe8bpLHnCwDKhdHeFQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexsans/v19/zYX9KVElMYYaJe8bpLHnCwDKjWr7AIFsdA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/ibmplexmono/v19/-F63fjptAgt5VM-kVkqdyU8n1i8q1w.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 body {
 	font-family: 'IBM Plex Sans', sans-serif;
 }
