favicon is broken when page is out of root dir.

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,10 +1,10 @@
 <head>
 
-<link rel="icon" type="image/png" href="../sbotools3/assets/images/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="../sbotools3/assets/images/favicon.svg" />
-<link rel="shortcut icon" href="../sbotools3/assets/images/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="../sbotools3/assets/images/apple-touch-icon.png" />
-<link rel="manifest" href="../sbotools3/assets/images/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://pghvlaans.github.io/sbotools3/assets/images/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://pghvlaans.github.io/sbotools3/assets/images/favicon.svg" />
+<link rel="shortcut icon" href="https://pghvlaans.github.io/sbotools3/assets/images/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://pghvlaans.github.io/sbotools3/assets/images/apple-touch-icon.png" />
+<link rel="manifest" href="https://pghvlaans.github.io/sbotools3/assets/images/site.webmanifest" />
 
 <style>
 @font-face {
