--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,7 @@ $sans-serif: "IBM Plex Sans";
 $monospace: "IBM Plex Mono";
 
 $base00: #121212 !default;
-$base07: #b5b5b5 !default;
+$base0f: #b5b5b5 !default;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
