--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,20 @@ $sans-serif: "IBM Plex Sans";
 $monospace: "IBM Plex Mono";
 
 $base00: #121212 !default;
+$base01: #b5b5b5 !default;
+$base02: #b5b5b5 !default;
+$base03: #b5b5b5 !default;
+$base04: #b5b5b5 !default;
+$base05: #b5b5b5 !default;
+$base06: #b5b5b5 !default;
+$base07: #b5b5b5 !default;
+$base08: #b5b5b5 !default;
+$base09: #b5b5b5 !default;
+$base0a: #b5b5b5 !default;
+$base0b: #b5b5b5 !default;
+$base0c: #b5b5b5 !default;
+$base0d: #b5b5b5 !default;
+$base0e: #b5b5b5 !default;
 $base0f: #b5b5b5 !default;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
