--- a/_includes/head/man.html
+++ b/_includes/head/man.html
@@ -12,7 +12,7 @@
   font-style: normal;
   font-weight: 450;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Text.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Text.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -21,7 +21,7 @@
   font-style: italic;
   font-weight: 450;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-TextItalic.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-TextItalic.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -30,7 +30,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Bold.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-Bold.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -39,7 +39,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-BoldItalic.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexSans-BoldItalic.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -48,7 +48,7 @@
   font-style: normal;
   font-weight: 450;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-Text.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-Text.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -57,7 +57,7 @@
   font-style: italic;
   font-weight: 450;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-TextItalic.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-TextItalic.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -66,7 +66,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-Bold.ttf) format('truetype');
+  src: url(https://pghvlaans.github.io/sbotools3/assets/fonts/IBMPlexMono-Bold.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
