--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,9 +1,9 @@
 <!-- start custom footer snippets -->
 
-<p style="text-align: center;">sbotools is neither affiliated nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.
+<p style="text-align: center;">sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</p>
 
-Slackware Linux is a registered trademark of Patrick Volkerding.
+<p style="text-align: center;">Slackware Linux is a registered trademark of Patrick Volkerding.</p>
 
-Linux is a registered trademark of Linus Torvalds.</p>
+<p style="text-align: center;">Linux is a registered trademark of Linus Torvalds.</p>
 
 <!-- end custom footer snippets -->
