Footer disclaimer font size?

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,9 +1,11 @@
 <!-- start custom footer snippets -->
 
+<div class="page__footer-follow">
 <p style="text-align: center;">sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</p>
 
 <p style="text-align: center;">Slackware Linux is a registered trademark of Patrick Volkerding.</p>
 
 <p style="text-align: center;">Linux is a registered trademark of Linus Torvalds.</p>
+</div>
 
 <!-- end custom footer snippets -->
