--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,11 +1,9 @@
 <!-- start custom footer snippets -->
 
-<div class="page__footer-follow">
-<p style="text-align: center;">sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</p>
+<p style="text-align: center;"><small>sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</small></p>
 
-<p style="text-align: center;">Slackware Linux is a registered trademark of Patrick Volkerding.</p>
+<p style="text-align: center;"><small>Slackware Linux is a registered trademark of Patrick Volkerding.</small></p>
 
-<p style="text-align: center;">Linux is a registered trademark of Linus Torvalds.</p>
-</div>
+<p style="text-align: center;"><small>Linux is a registered trademark of Linus Torvalds.</small></p>
 
 <!-- end custom footer snippets -->
