FreeBSD is mentioned in a man page.

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,9 +1,8 @@
 <!-- start custom footer snippets -->
 
-<p style="text-align: center;"><small>sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</small></p>
-
-<p style="text-align: center;"><small>Slackware Linux is a registered trademark of Patrick Volkerding.</small></p>
-
-<p style="text-align: center;"><small>Linux is a registered trademark of Linus Torvalds.</small></p>
+<p style="text-align: center;"><small>sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</small>
+<small>Slackware Linux is a registered trademark of Patrick Volkerding.</small>
+<small>Linux is a registered trademark of Linus Torvalds.</small>
+<small>FreeBSD is a registered trademark of the FreeBSD Foundation.</small></p>
 
 <!-- end custom footer snippets -->
