The sbofind man page no longer mentions FreeBSD.

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -2,7 +2,6 @@
 
 <p style="text-align: center;"><small>sbotools is neither affiliated with nor endorsed by Patrick Volkerding or Slackware Linux and is not officially supported by SlackBuilds.org.</small><br>
 <small>Slackware Linux is a registered trademark of Patrick Volkerding.</small><br>
-<small>Linux is a registered trademark of Linus Torvalds.</small><br>
-<small>FreeBSD is a registered trademark of the FreeBSD Foundation.</small></p>
+<small>Linux is a registered trademark of Linus Torvalds.</small></p>
 
 <!-- end custom footer snippets -->
